# voxterm-transcript-sink

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.phala.yaml  docker-compose.yaml  measurements.json  openapi.yaml  phala.toml  pyproject.toml
docs/: DEVELOPMENT.md  GETTING_STARTED.md  HOSTING_AND_GUARANTEES.md  PHALA_DEPLOY.md  REPRODUCE.md  SELF_HOSTING.md
specs/v1/: voxterm-sink-protocol.md  voxterm-sink-upload-cli.md
tests/: test_client_upload.py  test_simulator.py  test_sink.py
voxterm_sink_client/: __init__.py  __main__.py  http.py  identity.py  measurements.py  transcript.py  trust.py  upload.py  verify.py
voxterm_transcript_sink/: __init__.py  __main__.py  app.py  assembly.py  attestation.py  auth.py  canonical.py  config.py  identity.py  models.py  store.py
