[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxterm-data-sink"
version = "0.1.0"
description = "Reference PoC sink for the VoxTerm Sink Protocol (voxterm-sink/1)"
requires-python = ">=3.12"
license = { text = "see repository" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "blake3>=0.4",
    "rfc8785>=0.1",
    "cryptography>=42",
]

[project.optional-dependencies]
# Real TEE attestation. Only importable when deployed inside a dstack TD.
dstack = ["dstack-sdk>=0.1"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
voxterm-data-sink = "voxterm_transcript_sink.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["voxterm_transcript_sink"]
